# SpeechSplitter

./: app.py  pyproject.toml  replit.nix
api/: __init__.py  routes.py
diarization_core/: __init__.py  audio_recorder.py  feature_extractor.py  segmenter.py  speaker_diarization.py  voice_detector.py
diarizer/: __init__.py  audio_utils.py  core.py  feature_extraction.py
static/css/: custom.css
static/js/: react-component.js  recorder.js
templates/: demo.html  docs.html  index.html
utils/: __init__.py  audio_utils.py
