[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "librosa>=0.11.0",
    "webrtcvad>=2.0.10",
    "scikit-learn>=1.6.1",
    "soundfile>=0.13.1",
    "numpy>=2.2.4",
]
